# gtf_splice_index

./: Cargo.toml  README.md
src/: index.rs  lib.rs  main.rs  types.rs
src/annotation/: builder.rs  io.rs  mod.rs
src/model/: gene.rs  mod.rs  transcript.rs  types.rs
