[package]
name = "gtf_splice_index"
version = "0.4.2"
edition = "2024"
description = "A fast, splice-aware index for GTF/GFF annotations enabling efficient transcript and gene lookup for RNA-seq read mapping and quantification."
license = "MIT"
repository = "https://github.com/stela2502/gtf_splice_index"
homepage = "https://github.com/stela2502/gtf_splice_index"
documentation = "https://docs.rs/gtf_splice_index"
readme = "README.md"
keywords = ["bioinformatics", "rna-seq", "gtf", "splicing", "genomics"]
categories = ["science", "command-line-utilities"]
authors = ["Stefan Lang"]


[dependencies]
flate2 = "1.1.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
zstd = "0.13"
